--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.0
   path_provider: any
   fluttertoast: ^8.0.8
+  record: ^3.0.2
   # flutter_audio_recorder: any
 
   # The following adds the Cupertino Icons font to your application.
